static/css/style.css
.container {
  max-width: 960px;
}

.icon-link > .bi {
  width: .75em;
  height: .75em;
}

/*
 * Custom translucent site header
 */

.site-header {
  background-color: rgba(0, 0, 0, .85);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}
.site-header a {
  color: #8e8e8e;
  transition: color .15s ease-in-out;
}
.site-header a:hover {
  color: #fff;
  text-decoration: none;
}

/*
 * Dummy devices (replace them with your own or something else entirely!)
 */

.product-device {
  position: absolute;
  right: 10%;
  bottom: -30%;
  width: 300px;
  height: 540px;
  background-color: #333;
  border-radius: 21px;
  transform: rotate(30deg);
}

.my-dev-image::before {
  position: absolute;
  top: 10%;
  right: 10px;
  bottom: 10%;
  left: 10px;
  content: "";
  background-color: rgba(255, 255, 255, .1);
  border-radius: 5px;
}

.my-dev-image{
 position: absolute;
  right: 20%;
  bottom: -1%;
  width: 100px;
  height: 340px;
  background-color: #333;
  border-radius: 21px;
  transform: rotate(30deg);
}

.my-dev-image-2{
  top: -105%;
  right: auto;
  width: 20px;
  height: 50px;
  bottom: 0;
  left: -15%;
  background-color: #e5e5e5;
}


.product-device-2 {
  top: -25%;
  right: auto;
  bottom: 0;
  left: 5%;
  background-color: #e5e5e5;
}

/*
 * Extra utilities
 */

.flex-equal > * {
  flex: 1;
}
@media (min-width: 768px) {
  .flex-md-equal > * {
    flex: 1;
  }
}

.bd-placeholder-img {
    font-size: 1.125rem;
    text-anchor: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none
}

@media (min-width: 768px) {
    .bd-placeholder-img-lg {
        font-size:3.5rem
    }
}

.b-example-divider {
    width: 100%;
    height: 3rem;
    background-color: #0000001a;
    border: solid rgba(0,0,0,.15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em #0000001a,inset 0 .125em .5em #00000026
}

.b-example-vr {
    flex-shrink: 0;
    width: 1.5rem;
    height: 100vh
}

.bi {
    vertical-align: -.125em;
    fill: currentColor
}

.nav-scroller {
    position: relative;
    z-index: 2;
    height: 2.75rem;
    overflow-y: hidden
}

.nav-scroller .nav {
    display: flex;
    flex-wrap: nowrap;
    padding-bottom: 1rem;
    margin-top: -1px;
    overflow-x: auto;
    text-align: center;
    white-space: nowrap;
    -webkit-overflow-scrolling: touch
}

.btn-bd-primary {
    --bd-violet-bg: #712cf9;
    --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
    --bs-btn-font-weight: 600;
    --bs-btn-color: var(--bs-white);
    --bs-btn-bg: var(--bd-violet-bg);
    --bs-btn-border-color: var(--bd-violet-bg);
    --bs-btn-hover-color: var(--bs-white);
    --bs-btn-hover-bg: #6528e0;
    --bs-btn-hover-border-color: #6528e0;
    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
    --bs-btn-active-color: var(--bs-btn-hover-color);
    --bs-btn-active-bg: #5a23c8;
    --bs-btn-active-border-color: #5a23c8
}

.bd-mode-toggle {
    z-index: 1500
}

.bd-mode-toggle .bi {
    width: 1em;
    height: 1em
}

.bd-mode-toggle .dropdown-menu .active .bi {
    display: block!important
}

.my-navbar {
  background-color: #35fafd !important;
}

.my-navtext .nav-link{
    color: #161818 !important;
}

.blog-bg{
    background-image: url("../assets/img/blog-bg2.png") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    padding-bottom: 20px;
}

.black-bg{
    background-image: url("../assets/img/black_bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.white-bg{
    background-image: url("../assets/img/white_bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.grey-bg{
    background-image: url("../assets/img/greyish.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.web-bg{
    background-image: url("../assets/img/web-scrap-bg.jpeg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    padding-bottom: 20px;
}

.my-web-img{
 position: absolute;
  right: 20%;
  bottom: -1%;
  width: 100px;
  height: 340px;
  background-color: #333;
  border-radius: 21px;
  transform: rotate(30deg);
}

.my-web-img::before{
  position: absolute;
  top: 10%;
  right: 10px;
  bottom: 10%;
  left: 10px;
  content: "";
  background-color: rgba(255, 255, 255, .1);
  border-radius: 5px;
}

.my-web-img-2{
  top: -105%;
  right: auto;
  width: 20px;
  height: 50px;
  bottom: 0;
  left: -5%;
  background-color: #e5e5e5;
}

.movies-bg{
    background-image: url("../assets/img/movies-bg.jpeg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.note{
    text-align: justify !important;
}

.spotify-bg{
    background-image: url("../assets/img/spotify-bg.jpeg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.amazon-bg{
    background-image: url("../assets/img/amazon-bg.jpeg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.ai-gui-bg{
    background-image: url("../assets/img/ai-gui-bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    padding-bottom: 20px;
}

.my-gui-img{
 position: absolute;
  right: 20%;
  bottom: -1%;
  width: 100px;
  height: 340px;
  background-color: #333;
  border-radius: 21px;
  transform: rotate(30deg);
}

.my-gui-img::before{
  position: absolute;
  top: 10%;
  right: 10px;
  bottom: 10%;
  left: 10px;
  content: "";
  background-color: rgba(255, 255, 255, .1);
  border-radius: 5px;
}

.my-gui-img-2{
  top: -70%;
  right: auto;
  width: 20px;
  height: 50px;
  bottom: 0;
  left: -30%;
  background-color: #e5e5e5;
}

.apartments-bg{
    background-image: url("../assets/img/apartments-bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.gym-bg{
    background-image: url("../assets/img/gym-bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.us-states-bg{
    background-image: url("../assets/img/us-states-bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.quiz-pass-bg{
    background-image: url("../assets/img/quiz-pass-bg.jpg") !important;
    background-size: 150% 100%;
    background-position: center;
    background-repeat: no-repeat;
}

.data-science-bg{
    background-image: url("../assets/img/data-science-bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    padding-bottom: 20px;
}

.data-science-img{
 position: absolute;
  right: 20%;
  bottom: -1%;
  width: 100px;
  height: 340px;
  background-color: #333;
  border-radius: 21px;
  transform: rotate(30deg);
}

.data-science-img::before{
  position: absolute;
  top: 10%;
  right: 10px;
  bottom: 10%;
  left: 10px;
  content: "";
  background-color: rgba(255, 255, 255, .1);
  border-radius: 5px;
}

.data-science-img-2{
  top: -90%;
  right: auto;
  width: 20px;
  height: 50px;
  bottom: 0;
  left: -35%;
  background-color: #e5e5e5;
}

.data-cleaning-bg{
    background-image: url("../assets/img/data-cleaning-bg.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.plot-graph-bg{
    background-image: url("../assets/img/plot-graph-bg.jpeg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.numpy-bg{
    background-image: url("../assets/img/numpy-bg.jpeg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.predict-bg{
    background-image: url("../assets/img/predict-bg.jpeg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

#About_pane

.bd-placeholder-img {
    font-size: 1.125rem;
    text-anchor: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none
}

@media (min-width: 768px) {
    .bd-placeholder-img-lg {
        font-size:3.5rem
    }
}

.b-example-divider {
    width: 100%;
    height: 3rem;
    background-color: #0000001a;
    border: solid rgba(0,0,0,.15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em #0000001a,inset 0 .125em .5em #00000026
}

.b-example-vr {
    flex-shrink: 0;
    width: 1.5rem;
    height: 100vh
}

.bi {
    vertical-align: -.125em;
    fill: currentColor
}

.nav-scroller {
    position: relative;
    z-index: 2;
    height: 2.75rem;
    overflow-y: hidden
}

.nav-scroller .nav {
    display: flex;
    flex-wrap: nowrap;
    padding-bottom: 1rem;
    margin-top: -1px;
    overflow-x: auto;
    text-align: center;
    white-space: nowrap;
    -webkit-overflow-scrolling: touch
}

.btn-bd-primary {
    --bd-violet-bg: #712cf9;
    --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
    --bs-btn-font-weight: 600;
    --bs-btn-color: var(--bs-white);
    --bs-btn-bg: var(--bd-violet-bg);
    --bs-btn-border-color: var(--bd-violet-bg);
    --bs-btn-hover-color: var(--bs-white);
    --bs-btn-hover-bg: #6528e0;
    --bs-btn-hover-border-color: #6528e0;
    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
    --bs-btn-active-color: var(--bs-btn-hover-color);
    --bs-btn-active-bg: #5a23c8;
    --bs-btn-active-border-color: #5a23c8
}

.bd-mode-toggle {
    z-index: 1500
}

.bd-mode-toggle .bi {
    width: 1em;
    height: 1em
}

.bd-mode-toggle .dropdown-menu .active .bi {
    display: block!important
}

.about-bg{
    background-image: url("../assets/img/about-me.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 400px;
}

.accountant-bg{
    background-image: url("../assets/img/accountant-img.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 250px;
}

.developer-img{
    background-image: url("../assets/img/developer-img.jpg") !important;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 250px;
}

.navbar {
    background-color: #00e5ff !important; /* your cyan color */
}

.navbar-collapse {
    background-color: #00e5ff !important;
}

.navbar .nav-link {
    color: #000000 !important;
}

